examples/1-nginx-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.22.1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      #     volumeMounts:
      #       - name: vol-cm-index-html
      #         subPath: index2.html
      #         mountPath: /usr/share/nginx/html/index.html
      #       - name: vol-pvc-local
      #         mountPath: /mnt/shared
      # volumes:
      #   - name: vol-cm-index-html
      #     configMap:
      #       name: cm-nginx
      #   - name: vol-pvc-local
      #     persistentVolumeClaim:
      #       claimName: pvc-local
