examples/2-nginx-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
spec:
  type: ClusterIP #type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: nginx
