examples/3-nginx-ingress.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
    - host: nginx.example.com
      http:
        paths:
          - backend:
              service:
                name: svc-nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
